XXX handler.EntropyData for solr6